🔧 add InvariantGlobalization to main Directory.Build.props

--- a/scripts/resources/Directory.Build.props.template
+++ b/scripts/resources/Directory.Build.props.template
@@ -9,5 +9,6 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NeutralLanguage>en</NeutralLanguage>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 </Project>
