--- a/dotnet-fsharp/TemplatingConsole/TemplatingConsole.fsproj
+++ b/dotnet-fsharp/TemplatingConsole/TemplatingConsole.fsproj
@@ -13,4 +13,9 @@
         <ProjectReference Include="..\TemplatingLib\TemplatingLib.fsproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="FsToolkit.ErrorHandling" Version="4.15.2"/>
+        <PackageReference Update="FSharp.Core" Version="8.0.300"/>
+    </ItemGroup>
+
 </Project>
