--- a/dotnet-fsharp/TemplatingLib.Tests/TemplatingLib.Tests.fsproj
+++ b/dotnet-fsharp/TemplatingLib.Tests/TemplatingLib.Tests.fsproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="FsToolkit.ErrorHandling" Version="4.15.2"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0"/>
         <PackageReference Include="Unquote" Version="7.0.0"/>
         <PackageReference Include="xunit" Version="2.8.0"/>
@@ -25,7 +26,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Update="FSharp.Core" Version="8.0.200"/>
+        <PackageReference Update="FSharp.Core" Version="8.0.300"/>
     </ItemGroup>
 
     <ItemGroup>
