--- a/dotnet-fsharp/TemplatingLib/TemplatingLib.fsproj
+++ b/dotnet-fsharp/TemplatingLib/TemplatingLib.fsproj
@@ -10,7 +10,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Update="FSharp.Core" Version="8.0.200"/>
+        <PackageReference Update="FSharp.Core" Version="8.0.300"/>
+        <PackageReference Include="FsToolkit.ErrorHandling" Version="4.15.2"/>
     </ItemGroup>
 
 </Project>
