--- a/dotnet-fsharp/TemplatingConsole/TemplatingConsole.fsproj
+++ b/dotnet-fsharp/TemplatingConsole/TemplatingConsole.fsproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Argu" Version="6.2.3"/>
         <PackageReference Include="FsToolkit.ErrorHandling" Version="4.15.2"/>
         <PackageReference Update="FSharp.Core" Version="8.0.300"/>
     </ItemGroup>
