--- a/dotnet-fsharp/TemplatingLib/TemplatingLib.fsproj
+++ b/dotnet-fsharp/TemplatingLib/TemplatingLib.fsproj
@@ -6,21 +6,22 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="XmlLib.fs"/>
         <Compile Include="Library.fs"/>
         <Content Include="resources\src\Directory.Build.props.template">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
         <Content Include="resources\tests\Directory.Build.props.template">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
         <Content Include="resources\Directory.Packages.props.template">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
         <Content Include="resources\Directory.Build.props.template">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
         <Content Include="resources\.gitattributes.template">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
 
