♻️ refactor: extract Types and Errors, remove XmlLib

--- a/dotnet-fsharp/TemplatingLib/TemplatingLib.fsproj
+++ b/dotnet-fsharp/TemplatingLib/TemplatingLib.fsproj
@@ -6,7 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="XmlLib.fs"/>
+        <Compile Include="Errors.fs" />
+        <Compile Include="Types.fs" />
         <Compile Include="Library.fs"/>
         <Content Include="resources\src\Directory.Build.props.template">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
