--- a/dotnet-fsharp/TemplatingLib/TemplatingLib.fsproj
+++ b/dotnet-fsharp/TemplatingLib/TemplatingLib.fsproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Defaults.fs"/>
         <Compile Include="Errors.fs"/>
         <Compile Include="Types.fs"/>
         <Compile Include="Library.fs"/>
