--- a/dotnet-fsharp/tests/TemplatingLib.Tests/TemplatingLib.Tests.fsproj
+++ b/dotnet-fsharp/tests/TemplatingLib.Tests/TemplatingLib.Tests.fsproj
@@ -15,9 +15,9 @@
 
     <ItemGroup>
         <PackageReference Include="FsToolkit.ErrorHandling" Version="4.15.2"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0"/>
         <PackageReference Include="Unquote" Version="7.0.0"/>
-        <PackageReference Include="xunit" Version="2.8.1" />
+        <PackageReference Include="xunit" Version="2.8.1"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -30,7 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TemplatingLib\TemplatingLib.fsproj"/>
+        <ProjectReference Include="..\..\src\TemplatingLib\TemplatingLib.fsproj"/>
     </ItemGroup>
 
 </Project>
