--- a/dotnet-fsharp/src/TemplatingConsole/TemplatingConsole.fsproj
+++ b/dotnet-fsharp/src/TemplatingConsole/TemplatingConsole.fsproj
@@ -2,7 +2,6 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,13 +10,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TemplatingLib\TemplatingLib.fsproj"/>
+        <PackageReference Include="Argu"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Argu" Version="6.2.4"/>
-        <PackageReference Include="FsToolkit.ErrorHandling" Version="4.15.2"/>
-        <PackageReference Update="FSharp.Core" Version="8.0.300"/>
+        <ProjectReference Include="..\TemplatingLib\TemplatingLib.fsproj"/>
     </ItemGroup>
 
 </Project>
