--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,3 +29,5 @@ jobs:
     - name: Test
       working-directory: ./dotnet-fsharp
       run: dotnet test --no-build --verbosity normal
+    - name: Publish
+      run: ./publish.sh
