--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
           release_name="${application_name}-${tag}-${{ matrix.target }}"
 
           # Build everything
-          cd ./dotnet-fsharp && ./publish.sh ${runtime} ${framework} ${release_name}
+          ./publish.sh ${runtime} ${framework} ${release_name}
 
           # Pack files
           if [ "${{ matrix.target }}" == "win-x64" ]; then
