--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,6 @@ jobs:
       - name: Publish
         uses: softprops/action-gh-release@v2
         with:
-          files: "App*"
+          files: "${application_name}*"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
