--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,11 +7,17 @@ jobs:
   release:
     strategy:
       matrix:
-        kind: ['linux']
+        kind: ['linux', 'windows', 'macOS']
         include:
           - kind: linux
             os: ubuntu-latest
             target: linux-x64
+          - kind: windows
+            os: windows-latest
+            target: win-x64
+          - kind: macOS
+            os: macos-latest
+            target: osx-x64
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
