--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,14 +50,15 @@ jobs:
         if: matrix.kind == 'macOS' || matrix.kind == 'linux'
         run: |
           for filename in *.tar.gz; do
-            shasum -a 256 ${filename} | awk '{printf $1}' > ${filename%.*}_sha256_checksum.txt
+            shasum -a 256 ${filename} | awk '{printf $1}' > ${filename%.*.*}_sha256_checksum.txt
           done
-      - name: Set SHA (window)
-        if: matrix.kind == 'windows'
-        run: |
-          for filename in *.zip; do
-            shasum -a 256 ${filename} | awk '{printf $1}' > ${filename%.*}_sha256_checksum.txt
-          done
+      # - name: Set SHA (window)
+      #   if: matrix.kind == 'windows'
+      #   run: |
+      #     # TODO must be translated to powershell syntax...!
+      #     for filename in *.zip; do
+      #       shasum -a 256 ${filename} | awk '{printf $1}' > ${filename%.*.*}_sha256_checksum.txt
+      #     done
       - name: Publish
         uses: softprops/action-gh-release@v2
         with:
