--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,6 +16,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run: 
+        working-directory: ./code
+
 
     steps:
     - uses: actions/checkout@v4
@@ -26,21 +30,16 @@ jobs:
         dotnet-version: 8.0.x
     
     - name: Restore dotnet tools
-      working-directory: ${{ env.CODE_DIRECTORY }}
       run: dotnet tool restore
     
     - name: Lint F# (Fantomas)
-      working-directory: ${{ env.CODE_DIRECTORY }}
       run: dotnet fantomas .
     
     - name: Restore dependencies
-      working-directory: ${{ env.CODE_DIRECTORY }}
       run: dotnet restore
     
     - name: Build
-      working-directory: ${{ env.CODE_DIRECTORY }}
       run: dotnet build --no-restore
     
     - name: Test
-      working-directory: ${{ env.CODE_DIRECTORY }}
       run: dotnet test --no-build --verbosity normal
