--- a/code/src/TemplatingLib/TemplatingLib.fsproj
+++ b/code/src/TemplatingLib/TemplatingLib.fsproj
@@ -8,6 +8,7 @@
         <Compile Include="Constants.fs"/>
         <Compile Include="Errors.fs"/>
         <Compile Include="Types.fs"/>
+        <Compile Include="XmlParsing.fs" />
         <Compile Include="Library.fs"/>
         <Content Include="resources\src\Directory.Build.props.template">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
