✨ feat: editorconfig creation is language dependent (c#/f#)
F# should be happy with a very simple editorconfig. C# needs more.

--- a/code/src/TemplatingLib/TemplatingLib.fsproj
+++ b/code/src/TemplatingLib/TemplatingLib.fsproj
@@ -25,6 +25,9 @@
         <Content Include="resources\.gitattributes.template">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <Content Include="resources\.editorconfig.fsharp.template">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
