--- a/code/Directory.Build.props
+++ b/code/Directory.Build.props
@@ -1,14 +1,15 @@
 <Project>
-    <PropertyGroup>
-        <AnalysisLevel>latest-All</AnalysisLevel>
-        <ErrorLog>codeanalysis.sarif.json</ErrorLog>
-        <AnalysisLevel>preview-recommended</AnalysisLevel>
-        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-        <AnalysisMode>All</AnalysisMode>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <NeutralLanguage>en</NeutralLanguage>
-        <InvariantGlobalization>true</InvariantGlobalization>
-    </PropertyGroup>
+  <PropertyGroup>
+    <AnalysisLevel>latest-All</AnalysisLevel>
+    <ErrorLog>codeanalysis.sarif.json</ErrorLog>
+    <AnalysisLevel>preview-recommended</AnalysisLevel>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <AnalysisMode>All</AnalysisMode>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <NeutralLanguage>en</NeutralLanguage>
+    <InvariantGlobalization>true</InvariantGlobalization>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
 </Project>
